--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -19,6 +19,12 @@
   cursor: pointer;
 }
 
+.popup__button-inactive {
+  mix-blend-mode: difference;
+  border: 1px solid white;
+  opacity: 0.2;
+}
+
 @media screen and (max-width: 568px) {
   .popup__button {
     font-size: 14px;
