--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -14,6 +14,20 @@
   margin-bottom: 0;
 }
 
+.popup__input-invalid {
+  border-block-end: 1px solid #f00;
+}
+
+.popup__input-error {
+  visibility: hidden;
+  font-size: 12px;
+  color: #f00;
+}
+
+.popup__input-error_active {
+  visibility: visible;
+}
+
 @media screen and (max-width: 568px) {
   .popup__title {
     font-size: 12px;
