улучшена структура, настроена работа с API, сервис отзывчив

--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,3 +1,7 @@
+.avatar_container {
+  position: relative;
+}
+
 .profile__image {
   width: 120px;
   height: 120px;
@@ -7,7 +11,28 @@
   background-size: cover;
   background-position: center;
   margin: 0 29px 0 0;
+  cursor: pointer;
 }
+
+.profile__image:hover {
+  opacity: 0.2;
+}
+
+.profile__image:hover + .change-avatar_icon {
+  display: block;
+}
+
+.change-avatar_icon {
+  position: absolute;
+  top: 47px;
+  left: 47px;
+  fill: #fff;
+  width: 26px;
+  height: 26px;
+  display: none;
+  cursor: pointer;
+}
+
 
 @media screen and (max-width: 740px) {
   .profile__image {
