--- a/src/blocks/card/__like-button/card__like-button.css
+++ b/src/blocks/card/__like-button/card__like-button.css
@@ -18,3 +18,11 @@
 .card__like-button:hover {
   opacity: 0.6;
 }
+
+.like-button__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3px;
+  font-size: inherit;
+}
